--- a/references.bib
+++ b/references.bib
@@ -1103,3 +1103,62 @@
 	location = {Vancouver, British Columbia, Canada},
 	series = {NIPS'07}
 }
+
+@techreport{burges2010from,
+	author = {Burges, Chris J.C.},
+	title = {From RankNet to LambdaRank to LambdaMART: An Overview},
+	year = {2010},
+	month = {June},
+	abstract = {LambdaMART is the boosted tree version of LambdaRank, which is based on RankNet. RankNet, LambdaRank, and LambdaMART have proven to be very successful algorithms for solving real world ranking problems: for example an ensemble of LambdaMART rankers won Track 1 of the 2010 Yahoo! Learning To Rank Challenge. The details of these algorithms are spread across several papers and reports, and so here we give a self-contained, detailed and complete description of them.},
+	url = {https://www.microsoft.com/en-us/research/publication/from-ranknet-to-lambdarank-to-lambdamart-an-overview/},
+	number = {MSR-TR-2010-82},
+}
+
+@article{rankml,
+	author    = {Doron Laadan and
+	Roman Vainshtein and
+	Yarden Curiel and
+	Gilad Katz and
+	Lior Rokach},
+	title     = {RankML: a Meta Learning-Based Approach for Pre-Ranking Machine Learning
+	Pipelines},
+	journal   = {CoRR},
+	volume    = {abs/1911.00108},
+	year      = {2019},
+	url       = {http://arxiv.org/abs/1911.00108},
+	eprinttype = {arXiv},
+	eprint    = {1911.00108},
+	timestamp = {Sat, 23 Jan 2021 01:20:08 +0100},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-1911-00108.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{pge2015,
+	title={A New Grammatical Evolution Based on Probabilistic Context-free Grammar},
+	author={Hyun-Tae Kim and Chang Wook Ahn},
+	year={2015},
+	doi={10.1007/978-3-319-13356-0_1},
+	url={https://doi.org/10.1007/978-3-319-13356-0_1},
+	publisher = {Springer International Publishing},
+	pages = {1--12},
+	author = {Hyun-Tae Kim and Chang Wook Ahn},
+	title = {A New Grammatical Evolution Based on Probabilistic Context-free Grammar},
+	booktitle = {Proceedings in Adaptation, Learning and Optimization}
+}
+
+@InProceedings{castiello2005metadata,
+	author="Castiello, Ciro
+	and Castellano, Giovanna
+	and Fanelli, Anna Maria",
+	editor="Torra, Vicen{\c{c}}
+	and Narukawa, Yasuo
+	and Miyamoto, Sadaaki",
+	title="Meta-data: Characterization of Input Features for Meta-learning",
+	booktitle="Modeling Decisions for Artificial Intelligence",
+	year="2005",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="457--468",
+	abstract="Common inductive learning strategies offer the tools for knowledge acquisition, but possess some inherent limitations due to the use of fixed bias during the learning process. To overcome limitations of such base-learning approaches, a novel research trend is oriented to explore the potentialities of meta-learning, which is oriented to the development of mechanisms based on a dynamical search of bias. This could lead to an improvement of the base-learner performance on specific learning tasks, by profiting of the accumulated past experience. As a significant set of I/O data is needed for efficient base-learning, appropriate meta-data characterization is of crucial importance for useful meta-learning. In order to characterize meta-data, firstly a collection of meta-features discriminating among different base-level tasks should be identified. This paper focuses on the characterization of meta-data, through an analysis of meta-features that can capture the properties of specific tasks to be solved at base level. This kind of approach represents a first step toward the development of a meta-learning system, capable of suggesting the proper bias for base-learning different specific task domains.",
+	isbn="978-3-540-31883-5"
+}
